// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders correctly 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#fff",
      },
      [
        undefined,
        {
          "width": "100%",
        },
      ],
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#fff",
        },
        {
          "flexDirection": "row",
          "gap": 60,
          "justifyContent": "space-around",
          "width": "100%",
        },
      ]
    }
    testID="header"
  >
    <Text />
    <Text />
    <Text />
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#eee",
        },
        {
          "height": 1,
          "marginTop": 10,
          "width": "100%",
        },
      ]
    }
  />
</View>
`;

exports[`<Header /> renders correctly with icons 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#fff",
      },
      [
        undefined,
        {
          "width": "100%",
        },
      ],
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#fff",
        },
        {
          "flexDirection": "row",
          "gap": 60,
          "justifyContent": "space-around",
          "width": "100%",
        },
      ]
    }
    testID="header"
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#3F3F3F",
            "fontSize": 28,
          },
          undefined,
          {
            "fontFamily": "material-community",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
      testID="icon-account"
    >
      󰀄
    </Text>
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#3F3F3F",
            "fontSize": 28,
          },
          undefined,
          {
            "fontFamily": "material-community",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
      testID="icon-diamond-stone"
    >
      󰇈
    </Text>
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#3F3F3F",
            "fontSize": 28,
          },
          undefined,
          {
            "fontFamily": "material-community",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
      testID="icon-menu"
    >
      󰍜
    </Text>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "#eee",
        },
        {
          "height": 1,
          "marginTop": 10,
          "width": "100%",
        },
      ]
    }
  />
</View>
`;
